--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,6 @@
 [deps]
 FluidisedBedAnalysis = "ea8bd7f1-6f9f-42a5-b31d-69377d2a4403"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+VTKDataIO = "c6703add-1d23-52c6-9943-3ad88652b9b2"
