Adding VTK function to Julia prepost

--- a/prepost/Project.toml
+++ b/prepost/Project.toml
@@ -2,6 +2,7 @@ name = "FluidisedBedAnalysis"
 uuid = "ea8bd7f1-6f9f-42a5-b31d-69377d2a4403"
 authors = ["Abhirup Roy <abhiruproy2002@gmail.com>"]
 version = "0.1.0"
+
 [deps]
 CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
@@ -9,3 +10,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 VTKDataIO = "c6703add-1d23-52c6-9943-3ad88652b9b2"
+WriteVTK = "64499a7a-5c06-52f2-abe2-ccb03c286192"
+
+[compat]
+WriteVTK = "1.21.2"
